--- a/src/components/NavBar/navbar.css
+++ b/src/components/NavBar/navbar.css
@@ -7,7 +7,7 @@
     padding: 1rem 2rem;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     position: sticky;
     top: 0;
     z-index: 3;
