--- a/src/components/Works/works.css
+++ b/src/components/Works/works.css
@@ -11,40 +11,91 @@
     padding: 0 1rem;
 }
 
-.worksTitle {
-    margin: 1rem 0;
-    font-size: 3rem;
+.project-link h3 svg {
+    margin-left: 10px;
+    vertical-align: middle;
+    color: #007bff;
 }
+
+/* Projects.css */
+.projects-container {
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 20px;
+    font-family: Arial, sans-serif;
+}
+
+.projects-list {
+    list-style: none;
+    padding: 0;
+}
+
+.project-item {
+    margin-bottom: 20px;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    transition: transform 0.2s, box-shadow 0.2s;
+}
+
+.project-item:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.project-link {
+    text-decoration: none;
+    color: inherit;
+    display: block;
+    padding: 20px;
+}
+
+.project-link h3 {
+    margin: 0 0 10px;
+    font-size: 1.5rem;
+    color: whitesmoke;
+}
+
+.project-link p {
+    margin: 0;
+    font-size: 1rem;
+    color: #666;
+}
+
+/*.worksTitle {*/
+/*    margin: 1rem 0;*/
+/*    font-size: 3rem;*/
+/*}*/
 
 .worksDesc {
     font-weight: 300;
     font-size: 1rem;
     max-width: 45rem;
+    margin-bottom: 12px;
 }
 
-.worksImgs {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
-    width: 100vw;
-    max-width: 65rem;
-}
+/*.worksImgs {*/
+/*    display: flex;*/
+/*    align-items: center;*/
+/*    justify-content: center;*/
+/*    flex-wrap: wrap;*/
+/*    width: 100vw;*/
+/*    max-width: 65rem;*/
+/*}*/
 
-.worksImg {
-    object-fit: cover;
-    height: 20rem;
-    margin: 0.5rem;
-}
+/*.worksImg {*/
+/*    object-fit: cover;*/
+/*    height: 20rem;*/
+/*    margin: 0.5rem;*/
+/*}*/
 
-.workBtn {
-    margin: 3rem 0;
-    padding: 0.5rem 2.5rem;
-    border: none;
-    border-radius: 2rem;
-    background: white;
-    font-size: 1rem;
-}
+/*.workBtn {*/
+/*    margin: 3rem 0;*/
+/*    padding: 0.5rem 2.5rem;*/
+/*    border: none;*/
+/*    border-radius: 2rem;*/
+/*    background: white;*/
+/*    font-size: 1rem;*/
+/*}*/
 
 @media screen and (max-width:585px) {
     .worksImg {
